2001-02-28  Shuhei KOBAYASHI  <shuhei@aqua.ocn.ne.jp>

	* mime-parse.el (mime-decode-parameter-plist,
	mime-decode-parameter-alist, mime-decode-parameters):
	Add doc string.

2001-02-28  Shuhei KOBAYASHI  <shuhei@aqua.ocn.ne.jp>

	* mime-parse.el (mime-decode-parameter-value): Decode MIME charset
	in multibyte buffer. [cf. <emacs-mime-ja:00817>]
	(mime-decode-parameter-plist): Downcase attributes.
	[cf. <emacs-mime-ja:00816>]
	(mime-decode-parameters): Alias for `mime-decode-parameter-plist'
	instead of `mime-decode-parameter-alist'.
	Add autoload cookie.
	(mime-parse-parameters-from-list): Make obsolete.
	(mime-parse-parameters): Return results as a plist.
	(mime-parse-Content-Type, mime-read-Content-Type): Moved type check
	to the caller side.
	(mime-parse-Content-Disposition, mime-read-Content-Disposition):
	Ditto.
	(mime-parse-Content-Transfer-Encoding,
	mime-read-Content-Transfer-Encoding): Ditto.

2001-02-27  Shuhei KOBAYASHI  <shuhei@aqua.ocn.ne.jp>

	MIME Parameter Value decoder support.
	
	* mime-def.el (std11-quoted-pair-regexp, std11-non-qtext-char-list,
	std11-qtext-regexp, std11-quoted-string-regexp): Removed.
	(mime-media-type/subtype-regexp): Ditto.
	(mime-attribute-char-regexp, mime-language-regexp,
	mime-encoding-regexp): New constants.

	* mime-parse.el (mime-lexical-analyze): New function.
	(mime/content-parameter-value-regexp, mime::parameter-regexp):
	Removed.
	(mime-parse-parameter): Ditto.
	(mime-decode-parameter-value, mime-decode-parameter-plist,
	mime-parse-alist-to-plist, mime-decode-parameter-alist):
	New functions.
	(mime-parse-parameters-from-list): New alias for
	`mime-decode-parameter-plist'.
	(mime-decode-parameters): New alias for
	`mime-decode-parameter-alist'.
	(mime-parse-parameters): New function.
	(mime-disposition-type-regexp): Removed.
	(mime-parse-Content-Type, mime-parse-Content-Disposition,
	mime-parse-Content-Transfer-Encoding): New implementation.
	(mime-read-Content-Type, mime-read-Content-Disposition,