@@ -1,3 +1,7 @@
+2001-03-09  Akihiro Arisawa  <ari@atesoft.advantest.co.jp>
+
+	* mime.el (mime-find-root-entity): Find root recursively.
+
 2001-02-28  Shuhei KOBAYASHI  <shuhei@aqua.ocn.ne.jp>
 
 	* mime-parse.el (mime-decode-parameter-plist,
